Takes away unused Routes from the Switch  in the App.js Component.

--- a/src/Components/NavBar/index.css
+++ b/src/Components/NavBar/index.css
@@ -1,5 +1,6 @@
 nav {
-  display: block;
+  display: inline;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: chartreuse;
+  padding: 20px;
 }
